Version 0.9.0beta1 - 2007-04-XX
 * Bug Fixes:
   * Failed PUID submission deactivates the submit button. (#2673)
   * Unable to specify album art file name mask. (#2655)
   * Fixed incorrect copying of album metadata to tracks. (#2698)
   * Added options to un-hide toolbars. (#2631)

Version 0.9.0alpha6 - 2007-04-04
 * New Features:
   * Added option --disable-autoupdate for 'build' and 'install' commands
     of the setup script. (#2551)
   * Automatically parse track numbers from file names like 01.flac for better
     cluster->album matching with untagged files.
   * Support for the new sorting tags in MP4 tags from iTunes 7.1.
   * Strip white-space from directory names. (#2558)
   * When replacing characters with their ascii equivalent, 'ß' should be
     replaced by 'ss'. (#2610)
   * Track level performer ARs. (#2561)
   * Remove leading and trailing whitespace from tags on file saving.
     (#892, #2665)
   * Support for labels, catalog numbers and barcodes.
 * Bug Fixes:
   * Artist names from ARs should be translated, too.
   * Freeze after answering no to "download the new version" prompt. (#2542)
   * %musicbrainz_albumid% not working in file renaming. (#2543)
   * Track time appears to display incorrectly if it's unknown on
     MusicBrainz. (#2548)
   * Fixed problem with removing albums/files after submitting PUIDs (#2556)
   * The user's script should be applied also to album metadata.
   * Fixed moving of additional files from paths with "special" characters.
 * Internals:
   * The browser integration HTTP server rewritten using QTcpServer.

Version 0.9.0alpha5 - 2007-03-18
 * New Features:
   * Replace Æ with AE in file/directory names. (#2512)
   * "Add cluster as release" (#1049)
   * Text labels under icon buttons. (#2476)
 * Bug Fixes:
   * Fixed fileId generator (caused problems with drag&drop
     if files with multiple formats are used).
   * Original Metadata not greyed out when no tracks are attached. (#2461)